--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "lucide-react": "^0.488.0",
     "next": "15.2.4",
     "react": "^19.0.0",
