--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.488.0",
     "next": "15.2.4",
     "react": "^19.0.0",
